--- a/addons/fdm_stock/views/stock_picking.xml
+++ b/addons/fdm_stock/views/stock_picking.xml
@@ -5,7 +5,7 @@
         <field name="model">stock.picking</field>
         <field name="inherit_id" ref="stock.view_picking_form"/>
         <field name="arch" type="xml">
-            <field name="country_code" position="before">
+            <field name="partner_id" position="before">
                 <field name="customer_id"/>
             </field>
 
