--- a/addons/fdm_stock/views/stock_picking.xml
+++ b/addons/fdm_stock/views/stock_picking.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="stock.view_picking_form"/>
         <field name="arch" type="xml">
             <field name="partner_id" position="before">
-                <field name="customer_id"/>
+                <field name="customer_id" attrs="{'invisible':[('customer_id','=',False)]}"/>
             </field>
 
         </field>
