--- a/addons/fdm_stock/views/stock_picking.xml
+++ b/addons/fdm_stock/views/stock_picking.xml
@@ -5,10 +5,9 @@
         <field name="model">stock.picking</field>
         <field name="inherit_id" ref="stock.view_picking_form"/>
         <field name="arch" type="xml">
-            <field name="partner_id" position="before">
-                <field name="customer_id" attrs="{'invisible':[('customer_id','=',False)]}"/>
-            </field>
-
+            <xpath expr="//div[hasclass('o_td_label')]/t" position="before">
+                <field name="customer_id"/>
+            </xpath>
         </field>
     </record>
 </odoo>
