--- a/addons/fdm_sale/views/sale_views.xml
+++ b/addons/fdm_sale/views/sale_views.xml
@@ -8,6 +8,9 @@
             <field name="create_date" position="after">
                 <field name="write_date"/>
             </field>
+            <field name="validity_date" position="attributes">
+                <attribute name="invisible">1</attribute>
+            </field>
 
         </field>
     </record>
