--- a/addons/fdm_sale/views/sale_views.xml
+++ b/addons/fdm_sale/views/sale_views.xml
@@ -8,6 +8,13 @@
             <field name="create_date" position="after">
                 <field name="write_date"/>
             </field>
+        </field>
+    </record>
+    <record id="fdm_view_sale_order_form_inherit" model="ir.ui.view">
+        <field name="name">fdm.sale.order.form</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_order_form"/>
+        <field name="arch" type="xml">
             <field name="validity_date" position="attributes">
                 <attribute name="invisible">1</attribute>
             </field>
