--- a/addons/fdm_sale/report/report_sale_order.xml
+++ b/addons/fdm_sale/report/report_sale_order.xml
@@ -3,7 +3,7 @@
     <template id="fdm_report_saleorder_document_inherit" inherit_id="sale.report_saleorder_document">
         <xpath expr="//td[@name='td_name']" position="replace">
             <td name="td_name">
-                <span t-field="line.product_id"/>
+                <span t-field="line.product_id.name"/>
             </td>
 
         </xpath>
