--- a/addons/fdm_website/views/template_extra_infos.xml
+++ b/addons/fdm_website/views/template_extra_infos.xml
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <template id="fdm_extra_info_inherit" inherit_id="website_sale.extra_info">
-        <xpath expr="//div[hasclass('s_website_form_rows')]" position="inside">
-        <div class="input-group datetimepickerExtraInfo" id="datetimepickerExtraInfo" data-target-input="nearest"
-                t-att-data-mindate="mindate"
-                t-att-data-maxdate="maxdate">
-            <input type="text" class="form-control datetimepicker-input o_survey_question_date bg-transparent text-dark rounded-0 p-0"
-                   t-attf-data-target="#datetimepickerExtraInfo" name="datetimepickerExtraInfo"
-                   />
-            <div t-if="not survey_form_readonly" class="input-group-append position-absolute" t-attf-data-target="#datetimepickerExtraInfo" data-toggle="datetimepicker">
-                <div class="input-group-text text-primary border-0 bg-transparent p-0"><i class="fa fa-calendar"></i></div>
+        <xpath expr="//div[hasclass('s_website_form_field')][1]" position="after">
+            <div class="form-group col-12">
+                <div class="row s_col_no_resize s_col_no_bgcolor">
+                    <label class="col-form-label col-sm-auto s_website_form_label" style="width: 200px" for="date1">
+                        <span class="s_website_form_label_content">Date</span>
+                    </label>
+                    <div class="s_website_form_date input-group date col-sm datetimepickerExtraInfo" id="datetimepickerExtraInfo"
+                         data-target-input="nearest" t-att-data-mindate="mindate">
+                        <input
+                                type="text"
+                                class="form-control datetimepicker-input s_website_form_input" t-attf-data-target="#datetimepickerExtraInfo" name="datetimepickerExtraInfo"
+                        />
+                        <div class="input-group-append"
+                             data-toggle="datetimepicker" t-attf-data-target="#datetimepickerExtraInfo">
+                            <div class="input-group-text">
+                                <i class="fa fa-calendar"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
         </xpath>
     </template>
 </odoo>
