--- a/addons/fdm_sale/report/report_sale_order.xml
+++ b/addons/fdm_sale/report/report_sale_order.xml
@@ -4,6 +4,7 @@
         <xpath expr="//td[@name='td_name']" position="replace">
             <td name="td_name">
                 <span t-field="line.product_id.name"/>
+                <p t-field="line.product_id.description_sale"/>
             </td>
 
         </xpath>
