--- a/addons/fdm_account/report/report_invoice.xml
+++ b/addons/fdm_account/report/report_invoice.xml
@@ -2,9 +2,9 @@
 <odoo>
     <template id="fdm_report_report_invoice_document_inherit" inherit_id="account.report_invoice_document">
         <xpath expr="//td[@name='account_invoice_line_name']" position="replace">
-            <td name="account_invoice_line_name">
-                <span t-field="line.product_id.name" t-options="{'widget': 'text'}"/>
-            </td>
+<!--            <td name="account_invoice_line_name">-->
+<!--                <span t-field="line.product_id.name" t-options="{'widget': 'text'}"/>-->
+<!--            </td>-->
         </xpath>
     </template>
 </odoo>
