--- a/addons/fdm_sale/views/sale_views.xml
+++ b/addons/fdm_sale/views/sale_views.xml
@@ -18,6 +18,14 @@
             <field name="validity_date" position="attributes">
                 <attribute name="invisible">1</attribute>
             </field>
+            <field name="payment_term_id" position="attributes">
+                <attribute name="invisible">1</attribute>
+            </field>
+            <field name="payment_term_id" position="after">
+                <field name="nbre_pax"/>
+                <field name="nbre_staff"/>
+                <field name="notes_comp"/>
+            </field>
 
         </field>
     </record>
