--- a/addons/fdm_stock/views/stock_picking.xml
+++ b/addons/fdm_stock/views/stock_picking.xml
@@ -8,6 +8,11 @@
             <xpath expr="//div[hasclass('o_td_label')]" position="before">
                 <field name="customer_id"/>
             </xpath>
+            <field name="origin" position="after">
+                <field name="nbre_pax"/>
+                <field name="nbre_staff"/>
+                <field name="notes_comp"/>
+            </field>
         </field>
     </record>
     <record id="fdm_view_picking_calendar_inherit" model="ir.ui.view">
