--- a/addons/fdm_sale/report/report_sale_order.xml
+++ b/addons/fdm_sale/report/report_sale_order.xml
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <template id="fdm_report_saleorder_document_inherit" inherit_id="sale.report_saleorder_document">
-        <xpath expr="//td[@name='td_name']" position="replace">
-            <td name="td_name">
-                <t t-set="description_name" t-value="line.name.replace('[%s]' %line.product_id.default_code,'')"/>
-                <span t-esc="description_name"/>
-            </td>
-
-        </xpath>
+        <div id="informations" position="after">
+            <div class="row mt32 mb32" id="nbr_info">
+                <div t-if="doc.nbre_pax" class="col-auto col-3 mw-100 mb-2">
+                    <strong>Nbr Pax:</strong>
+                    <p class="m-0" t-field="doc.nbre_pax"/>
+                </div>
+                <div t-if="doc.nbre_staff" class="col-auto col-3 mw-100 mb-2">
+                    <strong>Nbr Staff:</strong>
+                    <p class="m-0" t-field="doc.nbre_staff"/>
+                </div>
+                <div t-if="doc.notes_comp" class="col-auto col-3 mw-100 mb-2">
+                    <strong>Additional notes:</strong>
+                    <p class="m-0" t-field="doc.notes_comp"/>
+                </div>
+            </div>
+        </div>
     </template>
 </odoo>
