--- a/addons/fdm_account/report/report_account.xml
+++ b/addons/fdm_account/report/report_account.xml
@@ -4,5 +4,12 @@
         <xpath expr="//span[@t-field='o.narration']" position="after">
             <p t-field="env.company.note_report" style="color:#2c75ff;"/>
         </xpath>
+        <xpath expr="//div[@name='due_date']" position="replace">
+            <div class="col-auto col-3 mw-100 mb-2"
+                 t-if="o.delivery_dates and o.move_type == 'out_invoice' and o.state == 'posted'" name="due_date">
+                <strong>Delivery date:</strong>
+                <p class="m-0" t-field="o.delivery_dates"/>
+            </div>
+        </xpath>
     </template>
 </odoo>
