--- a/addons/fdm_account/report/report_account.xml
+++ b/addons/fdm_account/report/report_account.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <template id="fdm_report_report_invoice_document_inherit" inherit_id="account.report_invoice_document">
-        <xpath expr="//span[@t-field='o.narration']" position="after">
+        <xpath expr="//div[@id='total']" position="before">
             <p t-field="env.company.note_report" style="color:#2c75ff;"/>
         </xpath>
         <xpath expr="//div[@name='due_date']" position="replace">
