--- a/addons/fdm_mrp/views/product_view.xml
+++ b/addons/fdm_mrp/views/product_view.xml
@@ -10,4 +10,14 @@
             </xpath>
         </field>
     </record>
+    <record id="fdm_product_temp_form_view" model="ir.ui.view">
+        <field name="name">fdm.product.product.temp.view.form.inherit</field>
+        <field name="model">product.template</field>
+        <field name="inherit_id" ref="product.product_template_only_form_view"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='categ_id']" position="after">
+                <field name="is_menu"/>
+            </xpath>
+        </field>
+    </record>
 </odoo>
