--- a/addons/fdm_mrp/report/report_mrp.xml
+++ b/addons/fdm_mrp/report/report_mrp.xml
@@ -11,7 +11,7 @@
                     <thead style="display: table-row-group">
                         <tr>
                             <th name="th_product" class="text-left">Product</th>
-                            <th name="th_product" class="text-left">Quantity</th>
+                            <th name="th_qty" class="text-left">Quantity</th>
                         </tr>
                     </thead>
                     <t t-foreach="daily_product_list" t-as="line">
@@ -76,10 +76,10 @@
                 <table class="table table-sm o_main_table">
                     <thead style="display: table-row-group">
                         <tr>
-                            <th name="th_product" class="text-left">Client</th>
-                            <th name="th_product" class="text-left">SO</th>
-                            <th name="th_product" class="text-left">Prouduct</th>
-                            <th name="th_product" class="text-left">Quantity</th>
+                            <th name="th_client" class="text-left">Client</th>
+                            <th name="th_so" class="text-left">SO</th>
+                            <th name="th_product" class="text-left"></th>
+                            <th name="th_qty" class="text-left">Quantity</th>
                         </tr>
                     </thead>
                     <t t-foreach="daily_client_list" t-as="line">
@@ -102,42 +102,58 @@
                                 <td>
                                     <span t-esc="client"/>
                                 </td>
-                                <td></td>
-                                <td></td>
+                                <td colspan="2"/>
                             </tr>
-                            <t t-set="productions_ids"
-                               t-value="env['mrp.production'].browse(line.get('mo_ids')).filtered(lambda p: p.origin ==client)"/>
-                            <t t-set="bom_lines_menu_ids"
-                               t-value="env['mrp.bom.line'].browse(line.get('bom_line_menu_list'))"/>
-                            <t t-foreach="productions_ids" t-as="production">
+                            <tr t-if="line.get('mo_products')">
+                                <td colspan="2"/>
+                                <td colspan="2">
+                                    <strong>Product</strong>
+                                </td>
+                            </tr>
+                            <t t-foreach="line.get('mo_products')" t-as="mo_product">
                                 <tr>
-                                    <td></td>
-                                    <td></td>
+                                    <td colspan="2"/>
                                     <td>
-                                        <span t-esc="production.product_id.name"/>
+                                        <span t-esc="mo_product.get('product_id')[1]"/>
                                     </td>
                                     <td>
-                                        <span t-esc="production.product_qty"
+                                        <span t-esc="mo_product.get('product_qty')"
                                               t-options='{"widget": "float", "decimal_precision": "Product Unit of Measure"}'/>
                                     </td>
                                 </tr>
                             </t>
-                            <tr t-if="bom_lines_menu_ids">
-                                <td></td>
-                                <td></td>
+                            <tr t-if="line.get('menu_list')">
                                 <td colspan="2">
-                                    <strong>Subcomponent</strong>
+                                </td>
+                                <td colspan="2">
+                                    <strong>Details of the articles to be produced</strong>
                                 </td>
                             </tr>
-                            <t t-foreach="bom_lines_menu_ids" t-as="bom_line">
+                            <t t-set="menu_product"
+                               t-value="env['product.product'].browse(line.get('menu_list'))"/>
+                            <t t-foreach="menu_product" t-as="menu">
                                 <tr>
-                                    <td></td>
-                                    <td></td>
+                                    <td colspan="2"></td>
+                                    <td colspan="2">
+                                        <span t-esc="menu.name"/>
+                                    </td>
+                                </tr>
+                            </t>
+                            <tr t-if="line.get('bom_line_menu')">
+                                <td colspan="2">
+                                </td>
+                                <td colspan="2">
+                                    <strong t-if="line.get('bom_line_menu')">Subcomponent</strong>
+                                </td>
+                            </tr>
+                            <t t-foreach="line.get('bom_line_menu')" t-as="bom_line">
+                                <tr>
+                                    <td colspan="2"/>
                                     <td>
-                                        <span t-esc="bom_line.product_id.name"/>
+                                        <span t-esc="bom_line.get('product_id')[1]"/>
                                     </td>
                                     <td>
-                                        <span t-esc="bom_line.product_qty"
+                                        <span t-esc="bom_line.get('product_qty')"
                                               t-options='{"widget": "float", "decimal_precision": "Product Unit of Measure"}'/>
                                     </td>
                                 </tr>
@@ -161,7 +177,7 @@
         <field name="report_type">qweb-pdf</field>
         <field name="report_name">fdm_mrp.report_production</field>
         <field name="report_file">fdm_mrp.report_production</field>
-        <field name="print_report_name">Daily Production</field>
+        <field name="print_report_name">'Daily Production'</field>
         <field name="binding_model_id" ref="mrp.model_mrp_production"/>
         <field name="binding_type">report</field>
     </record>
